更新代码并更新 sw 版本

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="style.css">
 	<link rel="manifest" href="js13kpwa.webmanifest">
+  <link rel="apple-touch-icon" href="icons/icon-32.png">
+  <link rel="apple-touch-icon" sizes="64x64" href="icons/icon-64.png">
+  <link rel="apple-touch-icon" sizes="96x96" href="icons/icon-96.png">
+  <link rel="apple-touch-icon" sizes="128x128" href="icons/icon-128.png">
+  <link rel="apple-touch-icon" sizes="168x168" href="icons/icon-168.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="icons/icon-192.png">
+  <link rel="apple-touch-icon" sizes="256x256" href="icons/icon-256.png">
+  <link rel="apple-touch-icon" sizes="521x512" href="icons/icon-512.png">
 	<script src="data/games.js" defer></script>
 	<script src="app.js" defer></script>
 </head>
