--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="style.css">
 	<link rel="manifest" href="js13kpwa.webmanifest">
-  <link rel="apple-touch-icon" href="icons/icon-32.png">
+  <link rel="apple-touch-icon" sizes="32x32" href="icons/icon-32.png">
   <link rel="apple-touch-icon" sizes="64x64" href="icons/icon-64.png">
   <link rel="apple-touch-icon" sizes="96x96" href="icons/icon-96.png">
   <link rel="apple-touch-icon" sizes="128x128" href="icons/icon-128.png">
